Fixed weird behavior with login and sign in forms on mobile

--- a/client/src/app/modules/auth/login-form/login-form.component.scss
+++ b/client/src/app/modules/auth/login-form/login-form.component.scss
@@ -3,7 +3,7 @@
   width: auto;
 }
 
-form {
+.login-form {
   width: 100%;
   max-width: 500px;
 }
@@ -23,4 +23,9 @@ form {
 .account-note__link {
   margin: 0 5px;
   display: inline-block;
+}
+
+.mat-form-field {
+  width: 500px;
+  max-width: 80%;
 }
