--- a/client/src/app/modules/auth/sign-in-form/sign-in-form.component.scss
+++ b/client/src/app/modules/auth/sign-in-form/sign-in-form.component.scss
@@ -5,7 +5,7 @@
   width: auto;
 }
 
-form {
+.signin-form {
   width: 100%;
   max-width: 500px;
 }
