--- a/client/src/styles/_classes.scss
+++ b/client/src/styles/_classes.scss
@@ -33,3 +33,7 @@
 .nav-block__link_active {
   background: rgba(0, 0, 0, 0.1) !important;
 }
+
+.full-width {
+  width: 100%;
+}
